<?xml version="1.0"?>
<package format="2">
  <name>graphslam_pkg</name>
  <version>0.0.0</version>
  <description>The graphslam_pkg package</description>

  <maintainer email="todo@todo.todo">root</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/TomislavZupanovic/GraphSLAM-2D</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-seaborn</exec_depend>

  <export>
  </export>
</package>
